+ Error handling and Combining and Sinks